sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:13: error: not found: value k
      if (!plusPetit(j,k)){
                       ^AlgBubbleSort2:14: error: not found: value k
        echange(j,k)
                  ^